[project]
name = "terra"
version = "0.0.1"
authors = [
  { name="Seth Angell", email="work@sethangell.com" },
]
description = "An environment variable management helper"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/VibeDrivenDevelopment/terra-python"
Issues = "https://github.com/VibeDrivenDevelopment/terra-python/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"